# plover_english_extended

./: README.md  plover_english_extended.py  setup.cfg
