[metadata]
name = plover_english_extended
version = 0.0.1
description = English language system for Plover, but with distinct mappings for all the keys, so you can map them individualy
long_description = file: README.rst
author = Craig Muth
author_email = craig.muth@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/trogdoro/plover_english_extended
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev0
py_modules =
	plover_english_extended

[options.entry_points]
plover.system =
  English Extended Stenotype = plover_english_extended|
